--- a/README
+++ b/README
@@ -7,7 +7,8 @@ Customizations
 --------------
 Applied systray, pertag patches and configured statusbar to show
 on all monitors.
-Added keybindings for audio, backlight, screen locker and some programs.
+Added keybindings for audio, backlight, screen locker, screenshots
+and some programs.
 
 
 Requirements
